[package]
name = "url-previewer"
version = "0.1.0"
authors = ["catLee <leemiyinghao@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version="0.4", features=["json"] }
reqwest = { version="0.11", features=["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4.5"
lazy_static = "1.4"
diesel = { version = "1.4.4", features = ["postgres"] }
uuid = "0.8"
dotenv = "0.15.0"